# quiz_iq_hub

./: .gitignore  compose.yaml
admin-sphere/: .env.sample  Dockerfile.dev  pyproject.toml
admin-sphere/app/: main.py
admin-sphere/app/config/: settings.py
admin-sphere/app/controllers/: admin_auth_controller.py  admin_crud_controller.py
admin-sphere/app/models/: admin_model.py
admin-sphere/app/routes/: admin_route.py
admin-sphere/app/utils/: apierrors.py  types.py
course-service/: pyproject.toml
openai-service/: .env.example  pyproject.toml
openai-service/app/: main.py
openai-service/app/config/: settings.py
openai-service/app/controllers/: db_controller.py  openai_controller.py
openai-service/app/models/: quiz_model.py  user_model.py
openai-service/app/utils/: apierrors.py  openai_helper.py
quizBackend/: Dockerfile.dev  env_backup
quizBackend/quizbackend/: settings.py
quizBackend/quizbackend/controllers/: admin_controller.py  auth_controller.py  openai_controller.py  quiz_controller.py  user_controller.py
quizBackend/quizbackend/db/: db_connector.py
quizBackend/quizbackend/models/: admin_model.py  pydantic_model.py  quiz_model.py  user_model.py
quizBackend/quizbackend/routes/: adminRoute.py  userRoute.py
quizBackend/quizbackend/utils/: openai_client.py
quiz_frontend/: Dockerfile.dev  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
quiz_frontend/src/: middlware.ts
quiz_frontend/src/api-actions/: quizApiActions.ts
user-sphere/: .dockerignore  .env.sample  Dockerfile.dev
user-sphere/app/: main.py
(+55 files in other folders)
